// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Character /> renders the Character component correctly 1`] = `
<styled.div>
  <MovieDetails
    movie={
      Object {
        "characters": Array [
          "https://swapi.co/api/people/1/",
          "https://swapi.co/api/people/2/",
          "https://swapi.co/api/people/3/",
          "https://swapi.co/api/people/4/",
          "https://swapi.co/api/people/5/",
          "https://swapi.co/api/people/10/",
          "https://swapi.co/api/people/13/",
          "https://swapi.co/api/people/14/",
          "https://swapi.co/api/people/18/",
          "https://swapi.co/api/people/20/",
          "https://swapi.co/api/people/21/",
          "https://swapi.co/api/people/22/",
          "https://swapi.co/api/people/23/",
          "https://swapi.co/api/people/24/",
          "https://swapi.co/api/people/25/",
          "https://swapi.co/api/people/26/",
        ],
        "created": "2014-12-12T11:26:24.656000Z",
        "director": "Irvin Kershner",
        "edited": "2017-04-19T10:57:29.544256Z",
        "episode_id": 5,
        "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
        "planets": Array [
          "https://swapi.co/api/planets/4/",
          "https://swapi.co/api/planets/5/",
          "https://swapi.co/api/planets/6/",
          "https://swapi.co/api/planets/27/",
        ],
        "producer": "Gary Kurtz, Rick McCallum",
        "release_date": "1980-05-17",
        "species": Array [
          "https://swapi.co/api/species/6/",
          "https://swapi.co/api/species/7/",
          "https://swapi.co/api/species/3/",
          "https://swapi.co/api/species/2/",
          "https://swapi.co/api/species/1/",
        ],
        "starships": Array [
          "https://swapi.co/api/starships/15/",
          "https://swapi.co/api/starships/10/",
          "https://swapi.co/api/starships/11/",
          "https://swapi.co/api/starships/12/",
          "https://swapi.co/api/starships/21/",
          "https://swapi.co/api/starships/22/",
          "https://swapi.co/api/starships/23/",
          "https://swapi.co/api/starships/3/",
          "https://swapi.co/api/starships/17/",
        ],
        "title": "The Empire Strikes Back",
        "url": "https://swapi.co/api/films/2/",
        "vehicles": Array [
          "https://swapi.co/api/vehicles/8/",
          "https://swapi.co/api/vehicles/14/",
          "https://swapi.co/api/vehicles/16/",
          "https://swapi.co/api/vehicles/18/",
          "https://swapi.co/api/vehicles/19/",
          "https://swapi.co/api/vehicles/20/",
        ],
      }
    }
  />
  <table
    className="fl-table"
  >
    <thead>
      <tr>
        <th
          className="toggle name"
          onDoubleClick={[Function]}
        >
          Name 
        </th>
        <th
          className="toggle-gender"
        >
          Gender
          <select
            onChange={[Function]}
            value="Filter"
          >
            <option
              defaultValue="Select Gender"
              disabled={true}
            >
              Filter
            </option>
            <option
              value="M"
            >
              M
            </option>
            <option
              value="F"
            >
              F
            </option>
          </select>
        </th>
        <th
          className="toggle height"
          onDoubleClick={[Function]}
        >
          Height 
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="Eze"
      >
        <td>
          Eze
        </td>
        <td>
          M
        </td>
        <td>
          300cm
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td
          className="total"
        >
          Total: 300cm (9ft/118.00in)
        </td>
      </tr>
    </tbody>
  </table>
</styled.div>
`;

exports[`<Character /> should call the mock onChange function 1`] = `
<Character
  characters={
    Array [
      Object {
        "gender": "male",
        "height": "300",
        "name": "Eze",
      },
    ]
  }
  getMovie={[MockFunction]}
  getMovies={[MockFunction]}
  movie={
    Object {
      "characters": Array [
        "https://swapi.co/api/people/1/",
        "https://swapi.co/api/people/2/",
        "https://swapi.co/api/people/3/",
        "https://swapi.co/api/people/4/",
        "https://swapi.co/api/people/5/",
        "https://swapi.co/api/people/10/",
        "https://swapi.co/api/people/13/",
        "https://swapi.co/api/people/14/",
        "https://swapi.co/api/people/18/",
        "https://swapi.co/api/people/20/",
        "https://swapi.co/api/people/21/",
        "https://swapi.co/api/people/22/",
        "https://swapi.co/api/people/23/",
        "https://swapi.co/api/people/24/",
        "https://swapi.co/api/people/25/",
        "https://swapi.co/api/people/26/",
      ],
      "created": "2014-12-12T11:26:24.656000Z",
      "director": "Irvin Kershner",
      "edited": "2017-04-19T10:57:29.544256Z",
      "episode_id": 5,
      "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
      "planets": Array [
        "https://swapi.co/api/planets/4/",
        "https://swapi.co/api/planets/5/",
        "https://swapi.co/api/planets/6/",
        "https://swapi.co/api/planets/27/",
      ],
      "producer": "Gary Kurtz, Rick McCallum",
      "release_date": "1980-05-17",
      "species": Array [
        "https://swapi.co/api/species/6/",
        "https://swapi.co/api/species/7/",
        "https://swapi.co/api/species/3/",
        "https://swapi.co/api/species/2/",
        "https://swapi.co/api/species/1/",
      ],
      "starships": Array [
        "https://swapi.co/api/starships/15/",
        "https://swapi.co/api/starships/10/",
        "https://swapi.co/api/starships/11/",
        "https://swapi.co/api/starships/12/",
        "https://swapi.co/api/starships/21/",
        "https://swapi.co/api/starships/22/",
        "https://swapi.co/api/starships/23/",
        "https://swapi.co/api/starships/3/",
        "https://swapi.co/api/starships/17/",
      ],
      "title": "The Empire Strikes Back",
      "url": "https://swapi.co/api/films/2/",
      "vehicles": Array [
        "https://swapi.co/api/vehicles/8/",
        "https://swapi.co/api/vehicles/14/",
        "https://swapi.co/api/vehicles/16/",
        "https://swapi.co/api/vehicles/18/",
        "https://swapi.co/api/vehicles/19/",
        "https://swapi.co/api/vehicles/20/",
      ],
    }
  }
  movies={
    Array [
      Object {
        "characters": Array [
          "https://swapi.co/api/people/1/",
          "https://swapi.co/api/people/2/",
          "https://swapi.co/api/people/3/",
          "https://swapi.co/api/people/4/",
          "https://swapi.co/api/people/5/",
          "https://swapi.co/api/people/10/",
          "https://swapi.co/api/people/13/",
          "https://swapi.co/api/people/14/",
          "https://swapi.co/api/people/18/",
          "https://swapi.co/api/people/20/",
          "https://swapi.co/api/people/21/",
          "https://swapi.co/api/people/22/",
          "https://swapi.co/api/people/23/",
          "https://swapi.co/api/people/24/",
          "https://swapi.co/api/people/25/",
          "https://swapi.co/api/people/26/",
        ],
        "created": "2014-12-12T11:26:24.656000Z",
        "director": "Irvin Kershner",
        "edited": "2017-04-19T10:57:29.544256Z",
        "episode_id": 5,
        "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
        "planets": Array [
          "https://swapi.co/api/planets/4/",
          "https://swapi.co/api/planets/5/",
          "https://swapi.co/api/planets/6/",
          "https://swapi.co/api/planets/27/",
        ],
        "producer": "Gary Kurtz, Rick McCallum",
        "release_date": "1980-05-17",
        "species": Array [
          "https://swapi.co/api/species/6/",
          "https://swapi.co/api/species/7/",
          "https://swapi.co/api/species/3/",
          "https://swapi.co/api/species/2/",
          "https://swapi.co/api/species/1/",
        ],
        "starships": Array [
          "https://swapi.co/api/starships/15/",
          "https://swapi.co/api/starships/10/",
          "https://swapi.co/api/starships/11/",
          "https://swapi.co/api/starships/12/",
          "https://swapi.co/api/starships/21/",
          "https://swapi.co/api/starships/22/",
          "https://swapi.co/api/starships/23/",
          "https://swapi.co/api/starships/3/",
          "https://swapi.co/api/starships/17/",
        ],
        "title": "The Empire Strikes Back",
        "url": "https://swapi.co/api/films/2/",
        "vehicles": Array [
          "https://swapi.co/api/vehicles/8/",
          "https://swapi.co/api/vehicles/14/",
          "https://swapi.co/api/vehicles/16/",
          "https://swapi.co/api/vehicles/18/",
          "https://swapi.co/api/vehicles/19/",
          "https://swapi.co/api/vehicles/20/",
        ],
      },
    ]
  }
  selectMovie={[MockFunction]}
  setCharacters={
    [MockFunction] {
      "calls": Array [
        Array [
          Array [],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-ifAKCX",
            "isStatic": false,
            "lastClassName": "eSPLeJ",
            "rules": Array [
              "
  margin: 10px 70px 70px;
  font-family: 'Open Sans', sans-serif;
  width: 100%;

  @media (max-width: 750px) {
    margin: 0;
  }
  .fl-table {
    border-radius: 5px;
    font-size: 12px;
    font-weight: normal;
    border: none;
    border-collapse: collapse;
    width: 100%;
    max-width: 100%;
    white-space: nowrap;
    background-color: white;
    .toggle {
      cursor: pointer;
    }

    .toggle-gender {
      display: flex;
      justify-content: space-evenly;
        
      
      select {
        display: block;
        font-family: 'Open Sans', sans-serif;
        font-weight: 700;
        color: #444;
        line-height: 1.3;
        padding: 0.6em 1.4em 0.5em 0.8em;
        width: 50%;
        box-sizing: border-box;
        border: 1px solid #aaa;
        box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
        border-radius: 0.5em;
        -moz-appearance: none;
        -webkit-appearance: none;
        appearance: none;
        background-color: #fff;
        background-image: url('https://github.com/Easybuoy/pstk-swapi-challenge/blob/feature/sort-gender-169663235/src/assets/images/dropdown.png?raw=true'),
          linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
        background-repeat: no-repeat, repeat;
        background-position: right 0.7em top 50%, 0 0;
        background-size: 3em auto, 100%;
        border-color: black;

        @media (max-width: 750px) {
          width: 75%;
        }
        &:hover {
          cursor: pointer;
          -webkit-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
          -moz-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
          box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
          transition: all 0.3s ease-in-out;
        }

        &:-ms-expand {
          display: none;
        }

        &:focus {
          box-shadow: black;
          color: #222;
          outline: none;
        }

        option {
          font-weight: bold;
        }
      }
    }

    .total {
      font-weight: bold;
    }
  }

  .fl-table td,
  .fl-table th {
    text-align: center;
    padding: 8px;
  }

  .fl-table td {
    border-right: 1px solid #f8f8f8;
    font-size: 12px;
  }

  .fl-table thead th {
    color: #000;
    background: #f7e523;
  }

  .fl-table thead th:nth-child(odd) {
    color: #f7e523;
    background: #000;
  }

  .fl-table tr:nth-child(even) {
    background: #f8f8f8;
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-ifAKCX",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="sc-ifAKCX eSPLeJ"
      >
        <MovieDetails
          movie={
            Object {
              "characters": Array [
                "https://swapi.co/api/people/1/",
                "https://swapi.co/api/people/2/",
                "https://swapi.co/api/people/3/",
                "https://swapi.co/api/people/4/",
                "https://swapi.co/api/people/5/",
                "https://swapi.co/api/people/10/",
                "https://swapi.co/api/people/13/",
                "https://swapi.co/api/people/14/",
                "https://swapi.co/api/people/18/",
                "https://swapi.co/api/people/20/",
                "https://swapi.co/api/people/21/",
                "https://swapi.co/api/people/22/",
                "https://swapi.co/api/people/23/",
                "https://swapi.co/api/people/24/",
                "https://swapi.co/api/people/25/",
                "https://swapi.co/api/people/26/",
              ],
              "created": "2014-12-12T11:26:24.656000Z",
              "director": "Irvin Kershner",
              "edited": "2017-04-19T10:57:29.544256Z",
              "episode_id": 5,
              "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
              "planets": Array [
                "https://swapi.co/api/planets/4/",
                "https://swapi.co/api/planets/5/",
                "https://swapi.co/api/planets/6/",
                "https://swapi.co/api/planets/27/",
              ],
              "producer": "Gary Kurtz, Rick McCallum",
              "release_date": "1980-05-17",
              "species": Array [
                "https://swapi.co/api/species/6/",
                "https://swapi.co/api/species/7/",
                "https://swapi.co/api/species/3/",
                "https://swapi.co/api/species/2/",
                "https://swapi.co/api/species/1/",
              ],
              "starships": Array [
                "https://swapi.co/api/starships/15/",
                "https://swapi.co/api/starships/10/",
                "https://swapi.co/api/starships/11/",
                "https://swapi.co/api/starships/12/",
                "https://swapi.co/api/starships/21/",
                "https://swapi.co/api/starships/22/",
                "https://swapi.co/api/starships/23/",
                "https://swapi.co/api/starships/3/",
                "https://swapi.co/api/starships/17/",
              ],
              "title": "The Empire Strikes Back",
              "url": "https://swapi.co/api/films/2/",
              "vehicles": Array [
                "https://swapi.co/api/vehicles/8/",
                "https://swapi.co/api/vehicles/14/",
                "https://swapi.co/api/vehicles/16/",
                "https://swapi.co/api/vehicles/18/",
                "https://swapi.co/api/vehicles/19/",
                "https://swapi.co/api/vehicles/20/",
              ],
            }
          }
        >
          <styled.div>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bZQynM",
                    "isStatic": false,
                    "lastClassName": "fonemt",
                    "rules": Array [
                      "
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
  margin: 2rem 0;

  .content {
    background-color: #000;
    height: 300px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;

    @media (max-width: 820px) {
      height: auto;
    }

    .content-details {
      display: flex;
      flex-wrap: wrap;
      width: 100%;
      justify-content: space-evenly;
      padding: 2rem;
      @media (max-width: 820px) {
        padding: 0;
      }
      .item {
        display: flex;
        flex-direction: column;
        margin: 1rem;
        text-align: center;
        h4 {
          color: #f7e523;
          font-family: 'Supermercado One', cursive;
        }

        p {
          color: #ffffff;
          font-family: 'Open Sans', sans-serif;
          padding: 0;
        }
      }
    }
  }
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bZQynM",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="sc-bZQynM fonemt"
              >
                <div
                  className="content"
                >
                  <div
                    className="content-details"
                  >
                    <div
                      className="item"
                    >
                      <h4>
                        Title
                      </h4>
                      <p>
                        The Empire Strikes Back
                      </p>
                    </div>
                    <div
                      className="item"
                    >
                      <h4>
                        Director
                      </h4>
                      <p>
                        Irvin Kershner
                      </p>
                    </div>
                    <div
                      className="item"
                    >
                      <h4>
                        Producer
                      </h4>
                      <p>
                        Gary Kurtz, Rick McCallum
                      </p>
                    </div>
                    <div
                      className="item"
                    >
                      <h4>
                        Release Date
                      </h4>
                      <p>
                        1980-05-17
                      </p>
                    </div>
                  </div>
                  <OpeningCrawl
                    opening_crawl="It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space...."
                  >
                    <styled.div>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-gzVnrw",
                              "isStatic": false,
                              "lastClassName": "jqnnCb",
                              "rules": Array [
                                "
  display: flex;
  color: #f7e523;
  padding: 2rem;
  font-family: 'Supermercado One', cursive;
",
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-gzVnrw",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="sc-gzVnrw jqnnCb"
                        >
                          <marquee
                            behavior="scroll"
                            direction="left"
                          >
                            It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....
                          </marquee>
                        </div>
                      </StyledComponent>
                    </styled.div>
                  </OpeningCrawl>
                </div>
              </div>
            </StyledComponent>
          </styled.div>
        </MovieDetails>
        <table
          className="fl-table"
        >
          <thead>
            <tr>
              <th
                className="toggle name"
                onDoubleClick={[Function]}
              >
                Name 
              </th>
              <th
                className="toggle-gender"
              >
                Gender
                <select
                  onChange={[Function]}
                  value="Filter"
                >
                  <option
                    defaultValue="Select Gender"
                    disabled={true}
                  >
                    Filter
                  </option>
                  <option
                    value="M"
                  >
                    M
                  </option>
                  <option
                    value="F"
                  >
                    F
                  </option>
                </select>
              </th>
              <th
                className="toggle height"
                onDoubleClick={[Function]}
              >
                Height 
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              key="Eze"
            >
              <td>
                Eze
              </td>
              <td>
                M
              </td>
              <td>
                300cm
              </td>
            </tr>
            <tr>
              <td />
              <td />
              <td
                className="total"
              >
                Total: 300cm (9ft/118.00in)
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </StyledComponent>
  </styled.div>
</Character>
`;

exports[`<Character /> should call the mock onDOubleCLick name function 1`] = `
<styled.div>
  <MovieDetails
    movie={
      Object {
        "characters": Array [
          "https://swapi.co/api/people/1/",
          "https://swapi.co/api/people/2/",
          "https://swapi.co/api/people/3/",
          "https://swapi.co/api/people/4/",
          "https://swapi.co/api/people/5/",
          "https://swapi.co/api/people/10/",
          "https://swapi.co/api/people/13/",
          "https://swapi.co/api/people/14/",
          "https://swapi.co/api/people/18/",
          "https://swapi.co/api/people/20/",
          "https://swapi.co/api/people/21/",
          "https://swapi.co/api/people/22/",
          "https://swapi.co/api/people/23/",
          "https://swapi.co/api/people/24/",
          "https://swapi.co/api/people/25/",
          "https://swapi.co/api/people/26/",
        ],
        "created": "2014-12-12T11:26:24.656000Z",
        "director": "Irvin Kershner",
        "edited": "2017-04-19T10:57:29.544256Z",
        "episode_id": 5,
        "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
        "planets": Array [
          "https://swapi.co/api/planets/4/",
          "https://swapi.co/api/planets/5/",
          "https://swapi.co/api/planets/6/",
          "https://swapi.co/api/planets/27/",
        ],
        "producer": "Gary Kurtz, Rick McCallum",
        "release_date": "1980-05-17",
        "species": Array [
          "https://swapi.co/api/species/6/",
          "https://swapi.co/api/species/7/",
          "https://swapi.co/api/species/3/",
          "https://swapi.co/api/species/2/",
          "https://swapi.co/api/species/1/",
        ],
        "starships": Array [
          "https://swapi.co/api/starships/15/",
          "https://swapi.co/api/starships/10/",
          "https://swapi.co/api/starships/11/",
          "https://swapi.co/api/starships/12/",
          "https://swapi.co/api/starships/21/",
          "https://swapi.co/api/starships/22/",
          "https://swapi.co/api/starships/23/",
          "https://swapi.co/api/starships/3/",
          "https://swapi.co/api/starships/17/",
        ],
        "title": "The Empire Strikes Back",
        "url": "https://swapi.co/api/films/2/",
        "vehicles": Array [
          "https://swapi.co/api/vehicles/8/",
          "https://swapi.co/api/vehicles/14/",
          "https://swapi.co/api/vehicles/16/",
          "https://swapi.co/api/vehicles/18/",
          "https://swapi.co/api/vehicles/19/",
          "https://swapi.co/api/vehicles/20/",
        ],
      }
    }
  />
  <table
    className="fl-table"
  >
    <thead>
      <tr>
        <th
          className="toggle name"
          onDoubleClick={[Function]}
        >
          Name 
          <span>
            ↑
          </span>
        </th>
        <th
          className="toggle-gender"
        >
          Gender
          <select
            onChange={[Function]}
            value="Filter"
          >
            <option
              defaultValue="Select Gender"
              disabled={true}
            >
              Filter
            </option>
            <option
              value="M"
            >
              M
            </option>
            <option
              value="F"
            >
              F
            </option>
          </select>
        </th>
        <th
          className="toggle height"
          onDoubleClick={[Function]}
        >
          Height 
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="Eze"
      >
        <td>
          Eze
        </td>
        <td>
          M
        </td>
        <td>
          300cm
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td
          className="total"
        >
          Total: 300cm (9ft/118.00in)
        </td>
      </tr>
    </tbody>
  </table>
</styled.div>
`;

exports[`<Character /> should call the mock onDOubleCLick name function 2`] = `
<styled.div>
  <MovieDetails
    movie={
      Object {
        "characters": Array [
          "https://swapi.co/api/people/1/",
          "https://swapi.co/api/people/2/",
          "https://swapi.co/api/people/3/",
          "https://swapi.co/api/people/4/",
          "https://swapi.co/api/people/5/",
          "https://swapi.co/api/people/10/",
          "https://swapi.co/api/people/13/",
          "https://swapi.co/api/people/14/",
          "https://swapi.co/api/people/18/",
          "https://swapi.co/api/people/20/",
          "https://swapi.co/api/people/21/",
          "https://swapi.co/api/people/22/",
          "https://swapi.co/api/people/23/",
          "https://swapi.co/api/people/24/",
          "https://swapi.co/api/people/25/",
          "https://swapi.co/api/people/26/",
        ],
        "created": "2014-12-12T11:26:24.656000Z",
        "director": "Irvin Kershner",
        "edited": "2017-04-19T10:57:29.544256Z",
        "episode_id": 5,
        "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
        "planets": Array [
          "https://swapi.co/api/planets/4/",
          "https://swapi.co/api/planets/5/",
          "https://swapi.co/api/planets/6/",
          "https://swapi.co/api/planets/27/",
        ],
        "producer": "Gary Kurtz, Rick McCallum",
        "release_date": "1980-05-17",
        "species": Array [
          "https://swapi.co/api/species/6/",
          "https://swapi.co/api/species/7/",
          "https://swapi.co/api/species/3/",
          "https://swapi.co/api/species/2/",
          "https://swapi.co/api/species/1/",
        ],
        "starships": Array [
          "https://swapi.co/api/starships/15/",
          "https://swapi.co/api/starships/10/",
          "https://swapi.co/api/starships/11/",
          "https://swapi.co/api/starships/12/",
          "https://swapi.co/api/starships/21/",
          "https://swapi.co/api/starships/22/",
          "https://swapi.co/api/starships/23/",
          "https://swapi.co/api/starships/3/",
          "https://swapi.co/api/starships/17/",
        ],
        "title": "The Empire Strikes Back",
        "url": "https://swapi.co/api/films/2/",
        "vehicles": Array [
          "https://swapi.co/api/vehicles/8/",
          "https://swapi.co/api/vehicles/14/",
          "https://swapi.co/api/vehicles/16/",
          "https://swapi.co/api/vehicles/18/",
          "https://swapi.co/api/vehicles/19/",
          "https://swapi.co/api/vehicles/20/",
        ],
      }
    }
  />
  <table
    className="fl-table"
  >
    <thead>
      <tr>
        <th
          className="toggle name"
          onDoubleClick={[Function]}
        >
          Name 
        </th>
        <th
          className="toggle-gender"
        >
          Gender
          <select
            onChange={[Function]}
            value="Filter"
          >
            <option
              defaultValue="Select Gender"
              disabled={true}
            >
              Filter
            </option>
            <option
              value="M"
            >
              M
            </option>
            <option
              value="F"
            >
              F
            </option>
          </select>
        </th>
        <th
          className="toggle height"
          onDoubleClick={[Function]}
        >
          Height 
          <span>
            ↑
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="Eze"
      >
        <td>
          Eze
        </td>
        <td>
          M
        </td>
        <td>
          300cm
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td
          className="total"
        >
          Total: 300cm (9ft/118.00in)
        </td>
      </tr>
    </tbody>
  </table>
</styled.div>
`;

exports[`<Character /> should call the mock onDOubleCLick name function 3`] = `
<styled.div>
  <MovieDetails
    movie={
      Object {
        "characters": Array [
          "https://swapi.co/api/people/1/",
          "https://swapi.co/api/people/2/",
          "https://swapi.co/api/people/3/",
          "https://swapi.co/api/people/4/",
          "https://swapi.co/api/people/5/",
          "https://swapi.co/api/people/10/",
          "https://swapi.co/api/people/13/",
          "https://swapi.co/api/people/14/",
          "https://swapi.co/api/people/18/",
          "https://swapi.co/api/people/20/",
          "https://swapi.co/api/people/21/",
          "https://swapi.co/api/people/22/",
          "https://swapi.co/api/people/23/",
          "https://swapi.co/api/people/24/",
          "https://swapi.co/api/people/25/",
          "https://swapi.co/api/people/26/",
        ],
        "created": "2014-12-12T11:26:24.656000Z",
        "director": "Irvin Kershner",
        "edited": "2017-04-19T10:57:29.544256Z",
        "episode_id": 5,
        "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
        "planets": Array [
          "https://swapi.co/api/planets/4/",
          "https://swapi.co/api/planets/5/",
          "https://swapi.co/api/planets/6/",
          "https://swapi.co/api/planets/27/",
        ],
        "producer": "Gary Kurtz, Rick McCallum",
        "release_date": "1980-05-17",
        "species": Array [
          "https://swapi.co/api/species/6/",
          "https://swapi.co/api/species/7/",
          "https://swapi.co/api/species/3/",
          "https://swapi.co/api/species/2/",
          "https://swapi.co/api/species/1/",
        ],
        "starships": Array [
          "https://swapi.co/api/starships/15/",
          "https://swapi.co/api/starships/10/",
          "https://swapi.co/api/starships/11/",
          "https://swapi.co/api/starships/12/",
          "https://swapi.co/api/starships/21/",
          "https://swapi.co/api/starships/22/",
          "https://swapi.co/api/starships/23/",
          "https://swapi.co/api/starships/3/",
          "https://swapi.co/api/starships/17/",
        ],
        "title": "The Empire Strikes Back",
        "url": "https://swapi.co/api/films/2/",
        "vehicles": Array [
          "https://swapi.co/api/vehicles/8/",
          "https://swapi.co/api/vehicles/14/",
          "https://swapi.co/api/vehicles/16/",
          "https://swapi.co/api/vehicles/18/",
          "https://swapi.co/api/vehicles/19/",
          "https://swapi.co/api/vehicles/20/",
        ],
      }
    }
  />
  <table
    className="fl-table"
  >
    <thead>
      <tr>
        <th
          className="toggle name"
          onDoubleClick={[Function]}
        >
          Name 
        </th>
        <th
          className="toggle-gender"
        >
          Gender
          <select
            onChange={[Function]}
            value="Filter"
          >
            <option
              defaultValue="Select Gender"
              disabled={true}
            >
              Filter
            </option>
            <option
              value="M"
            >
              M
            </option>
            <option
              value="F"
            >
              F
            </option>
          </select>
        </th>
        <th
          className="toggle height"
          onDoubleClick={[Function]}
        >
          Height 
          <span>
            ↑
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="Eze"
      >
        <td>
          Eze
        </td>
        <td>
          M
        </td>
        <td>
          300cm
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td
          className="total"
        >
          Total: 300cm (9ft/118.00in)
        </td>
      </tr>
    </tbody>
  </table>
</styled.div>
`;

exports[`<Character /> should call the mock onDOubleCLick name function 4`] = `<PreLoader />`;
